<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_cross"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/cancel_button"
            tools:targetApi="lollipop" />



        <ImageButton
            android:id="@+id/check_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:layout_marginLeft="300dp"
            android:layout_marginStart="300dp"
            android:src="@drawable/ic_tick"
            tools:targetApi="lollipop"
            android:contentDescription="@string/check_button" />
    </LinearLayout>


    <ImageView
        android:id="@+id/edit_profile_avatar"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_empty_image"
        android:contentDescription="@string/edit_profile_avatar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp"
            android:layout_marginTop="30dp"
            android:layout_weight="50" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="50"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:inputType="text"
            android:autofillHints="@string/email"
            tools:ignore="LabelFor,TextFields" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="50"
            android:text="@string/phone_number"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="50"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:autofillHints="@string/phone_number"
            android:inputType="number"
            tools:ignore="LabelFor,TextFields" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/dormitory"
            android:textSize="16sp"
            android:layout_marginTop="30dp"
            android:layout_weight="50"
            />

        <EditText
            android:id="@+id/edit_dormitory"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="50"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:autofillHints="@string/dormitory"
            android:inputType="text"
            tools:ignore="LabelFor" />
    </LinearLayout>


</LinearLayout>
