<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="0dp"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="italic|bold"
                android:gravity="center"/>

            <TextView
                android:id="@+id/student_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/welcome"
                android:layout_marginTop="80dp"
                android:text="@string/student_id"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/login_student_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/student_id"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:drawableLeft="@drawable/ic_name"
                android:drawableStart="@drawable/ic_name"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit"
                android:hint="@string/student_id"
                android:padding="8dp"
                android:maxLines="1"
                android:inputType="number"
                android:autofillHints="@string/student_id" />

            <TextView
                android:id="@+id/start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_student_id"
                android:layout_marginTop="30dp"
                android:text="@string/start_date"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/login_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/start_date"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:drawableLeft="@drawable/ic_start_date"
                android:drawableStart="@drawable/ic_start_date"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit"
                android:hint="@string/enter_start_date"
                android:padding="8dp"
                android:maxLines="1"
                android:autofillHints="@string/enter_start_date"
                android:inputType="date"/>


            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_start_date"
                android:layout_marginTop="70dp"
                android:background="@drawable/buttons"
                android:padding="4dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

        </RelativeLayout>

    </ScrollView>

</LinearLayout>
