<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".PostDetailsActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/post_wrapper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:id="@+id/post_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp"
                    tools:ignore="NotSibling">

                    <ImageView
                        android:id="@+id/post_detail_avatar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:backgroundTint="@color/white"
                        android:clickable="true"
                        android:contentDescription="@string/post_detail_avatar"
                        android:focusable="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_avatar"
                        tools:targetApi="lollipop" />

                    <TextView
                        android:id="@+id/post_detail_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_toLeftOf="@id/post_detail_image"
                        android:layout_toRightOf="@id/post_detail_avatar"
                        android:layout_toStartOf="@id/post_detail_image"
                        android:layout_toEndOf="@id/post_detail_avatar"
                        android:maxLines="1"
                        android:text="@string/post_detail_name"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/post_detail_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/post_detail_avatar"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_toLeftOf="@id/post_detail_image"
                        android:layout_toStartOf="@id/post_detail_image"
                        android:maxLines="1"
                        android:text="@string/post_detail_title"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/post_detail_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/post_detail_title"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_toLeftOf="@id/post_detail_image"
                        android:layout_toStartOf="@id/post_detail_image"
                        android:maxLines="2"
                        android:text="@string/post_detail_description" />


                    <TextView
                        android:id="@+id/post_detail_time"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/post_detail_description"
                        android:layout_alignParentLeft="true"
                        android:layout_toLeftOf="@id/post_detail_image"
                        android:text="@string/post_detail_time"
                        tools:ignore="RtlHardcoded" />

                    <ImageView
                        android:id="@+id/post_detail_image"
                        android:layout_width="84dp"
                        android:layout_height="108dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:foregroundGravity="fill_vertical"
                        android:backgroundTint="@color/white"
                        android:clickable="true"
                        android:contentDescription="@string/post_detail_image"
                        android:focusable="true"
                        android:src="@drawable/ic_empty_image"
                        tools:ignore="InefficientWeight"
                        tools:targetApi="lollipop" />

                    <TextView
                        android:id="@+id/post_detail_post_id"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>
